Add generics and fix compiler warnings.