@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2019, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2020, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * -------------
  * XYSeries.java
  * -------------
- * (C) Copyright 2001-2019, Object Refinery Limited and Contributors.
+ * (C) Copyright 2001-2020, Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   Aaron Metzger;
@@ -35,54 +35,14 @@
  *                   Richard Atkinson;
  *                   Michel Santos;
  *                   Ted Schwartz (fix for bug 1955483);
- *
- * Changes
- * -------
- * 15-Nov-2001 : Version 1 (DG);
- * 03-Apr-2002 : Added an add(double, double) method (DG);
- * 29-Apr-2002 : Added a clear() method (ARM);
- * 06-Jun-2002 : Updated Javadoc comments (DG);
- * 29-Aug-2002 : Modified to give user control over whether or not duplicate
- *               x-values are allowed (DG);
- * 07-Oct-2002 : Fixed errors reported by Checkstyle (DG);
- * 11-Nov-2002 : Added maximum item count, code contributed by Jonathan
- *               Gabbai (DG);
- * 26-Mar-2003 : Implemented Serializable (DG);
- * 04-Aug-2003 : Added getItems() method (DG);
- * 15-Aug-2003 : Changed 'data' from private to protected, added new add()
- *               methods with a 'notify' argument (DG);
- * 22-Sep-2003 : Added getAllowDuplicateXValues() method (RA);
- * 29-Jan-2004 : Added autoSort attribute, based on a contribution by
- *               Michel Santos - see patch 886740 (DG);
- * 03-Feb-2004 : Added indexOf() method (DG);
- * 16-Feb-2004 : Added remove() method (DG);
- * 18-Aug-2004 : Moved from org.jfree.data --> org.jfree.data.xy (DG);
- * 21-Feb-2005 : Added update(Number, Number) and addOrUpdate(Number, Number)
- *               methods (DG);
- * 03-May-2005 : Added a new constructor, fixed the setMaximumItemCount()
- *               method to remove items (and notify listeners) if necessary,
- *               fixed the add() and addOrUpdate() methods to handle unsorted
- *               series (DG);
- * ------------- JFreeChart 1.0.x ---------------------------------------------
- * 11-Jan-2005 : Renamed update(int, Number) --> updateByIndex() (DG);
- * 15-Jan-2007 : Added toArray() method (DG);
- * 31-Oct-2007 : Implemented faster hashCode() (DG);
- * 22-Nov-2007 : Reimplemented clone() (DG);
- * 01-May-2008 : Fixed bug 1955483 in addOrUpdate() method, thanks to
- *               Ted Schwartz (DG);
- * 24-Nov-2008 : Further fix for 1955483 (DG);
- * 06-Mar-2009 : Added minX, maxX, minY and maxY fields (DG);
- * 10-Jun-2009 : Make clones to isolate XYDataItem instances used
- *               for data storage (DG);
- * 02-Jul-2013 : Use ParamChecks (DG);
  * 
  */
 
 package org.jfree.data.xy;
 
 import java.io.Serializable;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
 import org.jfree.chart.util.ObjectUtils;
 import org.jfree.chart.util.Args;
@@ -108,7 +68,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
     // make subclasses that work directly with the underlying data structure.
 
     /** Storage for the data items in the series. */
-    protected List data;
+    protected List<XYDataItem> data;
 
     /** The maximum number of items for the series. */
     private int maximumItemCount = Integer.MAX_VALUE;
@@ -141,7 +101,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      *
      * @param key  the series key ({@code null} not permitted).
      */
-    public XYSeries(Comparable key) {
+    public XYSeries(Comparable<?> key) {
         this(key, true, true);
     }
 
@@ -153,7 +113,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @param autoSort  a flag that controls whether or not the items in the
      *                  series are sorted.
      */
-    public XYSeries(Comparable key, boolean autoSort) {
+    public XYSeries(Comparable<?> key, boolean autoSort) {
         this(key, autoSort, true);
     }
 
@@ -167,10 +127,10 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @param allowDuplicateXValues  a flag that controls whether duplicate
      *                               x-values are allowed.
      */
-    public XYSeries(Comparable key, boolean autoSort,
+    public XYSeries(Comparable<?> key, boolean autoSort,
             boolean allowDuplicateXValues) {
         super(key);
-        this.data = new java.util.ArrayList();
+        this.data = new java.util.ArrayList<>();
         this.autoSort = autoSort;
         this.allowDuplicateXValues = allowDuplicateXValues;
         this.minX = Double.NaN;
@@ -307,9 +267,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
         this.maxX = Double.NaN;
         this.minY = Double.NaN;
         this.maxY = Double.NaN;
-        Iterator iterator = this.data.iterator();
-        while (iterator.hasNext()) {
-            XYDataItem item = (XYDataItem) iterator.next();
+        for (XYDataItem item : this.data) {
             updateBoundsForAddedItem(item);
         }
     }
@@ -353,7 +311,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      *
      * @return The list of data items.
      */
-    public List getItems() {
+    public List<XYDataItem> getItems() {
         return Collections.unmodifiableList(this.data);
     }
 
@@ -412,7 +370,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @param y  the y value.
      */
     public void add(double x, double y) {
-        add(new Double(x), new Double(y), true);
+        add(Double.valueOf(x), Double.valueOf(y), true);
     }
 
     /**
@@ -426,7 +384,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      *                listeners.
      */
     public void add(double x, double y, boolean notify) {
-        add(new Double(x), new Double(y), notify);
+        add(Double.valueOf(x), Double.valueOf(y), notify);
     }
 
     /**
@@ -438,7 +396,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @param y  the y value ({@code null} permitted).
      */
     public void add(double x, Number y) {
-        add(new Double(x), y);
+        add(Double.valueOf(x), y);
     }
 
     /**
@@ -453,7 +411,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      *                listeners.
      */
     public void add(double x, Number y, boolean notify) {
-        add(new Double(x), y, notify);
+        add(Double.valueOf(x), y, notify);
     }
 
     /**
@@ -544,7 +502,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
         }
         updateBoundsForAddedItem(item);
         if (getItemCount() > this.maximumItemCount) {
-            XYDataItem removed = (XYDataItem) this.data.remove(0);
+            XYDataItem removed = this.data.remove(0);
             updateBoundsForRemovedItem(removed);
         }
         if (notify) {
@@ -574,7 +532,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @return The item removed.
      */
     public XYDataItem remove(int index) {
-        XYDataItem removed = (XYDataItem) this.data.remove(index);
+        XYDataItem removed = this.data.remove(index);
         updateBoundsForRemovedItem(removed);
         fireSeriesChanged();
         return removed;
@@ -617,7 +575,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @return The data item with the specified index.
      */
     public XYDataItem getDataItem(int index) {
-        XYDataItem item = (XYDataItem) this.data.get(index);
+        XYDataItem item = this.data.get(index);
         return (XYDataItem) item.clone();
     }
 
@@ -631,7 +589,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @since 1.0.14
      */
     XYDataItem getRawDataItem(int index) {
-        return (XYDataItem) this.data.get(index);
+        return this.data.get(index);
     }
 
     /**
@@ -754,7 +712,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @since 1.0.10
      */
     public XYDataItem addOrUpdate(double x, double y) {
-        return addOrUpdate(new Double(x), new Double(y));
+        return addOrUpdate(Double.valueOf(x), Double.valueOf(y));
     }
 
     /**
@@ -794,7 +752,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
         XYDataItem overwritten = null;
         int index = indexOf(item.getX());
         if (index >= 0) {
-            XYDataItem existing = (XYDataItem) this.data.get(index);
+            XYDataItem existing = this.data.get(index);
             overwritten = (XYDataItem) existing.clone();
             // figure out if we need to iterate through all the y-values
             boolean iterate = false;
@@ -829,7 +787,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
 
             // check if this addition will exceed the maximum item count...
             if (getItemCount() > this.maximumItemCount) {
-                XYDataItem removed = (XYDataItem) this.data.remove(0);
+                XYDataItem removed = this.data.remove(0);
                 updateBoundsForRemovedItem(removed);
             }
         }
@@ -853,7 +811,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
         }
         else {
             for (int i = 0; i < this.data.size(); i++) {
-                XYDataItem item = (XYDataItem) this.data.get(i);
+                XYDataItem item = this.data.get(i);
                 if (item.getX().equals(x)) {
                     return i;
                 }
@@ -895,7 +853,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
     @Override
     public Object clone() throws CloneNotSupportedException {
         XYSeries clone = (XYSeries) super.clone();
-        clone.data = (List) ObjectUtils.deepClone(this.data);
+        clone.data = (List<XYDataItem>) ObjectUtils.deepClone(this.data);
         return clone;
     }
 
@@ -913,7 +871,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
             throws CloneNotSupportedException {
 
         XYSeries copy = (XYSeries) super.clone();
-        copy.data = new java.util.ArrayList();
+        copy.data = new ArrayList<>();
         if (this.data.size() > 0) {
             for (int index = start; index <= end; index++) {
                 XYDataItem item = (XYDataItem) this.data.get(index);
